apps/aredn-meshmap/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aredn-meshmap
  namespace: aredn-meshmap
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-meshmap
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn
            app.kubernetes.io/instance: wireguard-tunnel
  ingress:
    - fromEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: aredn
          app.kubernetes.io/instance: wireguard-tunnel
